# mynitor-sdk

./: .gitignore  README.md
.github/workflows/: publish_sdk.yml
python/: pyproject.toml  setup.py
python/mynitor/: __init__.py  __main__.py  verify_naming.py
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: cli.ts  index.ts  verify_naming.ts
